--- a/3-open-source.tex
+++ b/3-open-source.tex
@@ -58,98 +58,79 @@ Some of the main licenses used in the wild are as follows:
 \begin{itemize}
 \item The MIT license, developed at MIT, is the most popular license on GitHub, the world's largest repository of code, used in over 40\% of the projects licensed there as of March 2015.\footnote{\href{https://blog.github.com/2015-03-09-open-source-license-usage-on-github-com/}{https://blog.github.com/2015-03-09-open-source-license-usage-on-github-com/}} It is a a very permissive license, which allows commercial use, modification, distribution, sublicensing, and private use of any code so licensed. It also waives liability for the authors of the code, saving them from needing to worry about lawsuits in cases where their code would otherwise be liable - the code is granted as is, and what the user does with it is not the author's fault. The only restriction is that you need to include the license in any software which uses it.
 \item The Apache License 2.0, developed by the Apache Software Foundation\footnote{\href{https://www.apache.org/licenses/}{https://www.apache.org/licenses/}}, is similar, but disallows users from trademarking code with the license, requires a few smaller modifications like stating code changes and adding a NOTICE file, if one exists, to derivational code, and also adds a patents clause for contributors.
-\item The BSD licenses were developed for use with Berkeley Software Distribution, a Unix-like OS. There have been multiple iterations; the first, 4-clause license required every subsequent license to reference and acknowledge the original, ending with large lists of acknowledgements; a subsequent 3-clause license (often called the "New" BSD) removed this, but kept a clause which stated that usage does not imply endorsement by the original contributors; and this was removed in a 2-clause version, often called "Simplified" or the "FreeBSD" license. 
-\item The GNU General Public License (GPL)\footnote{\href{https://www.gnu.org/licenses/}{https://www.gnu.org/licenses/}} is the main example of copyleft licensing, where any derivative works that use GPL licensed code must also use a GPL license. This causes major issues when users want to combine code from multiple sources, some of whose licenses may conflict. For this reason, the GNU Library or "Lesser" General Public License (LGPL) was created, to allow only code under the LGPL to be accessible and modifiable openly, while all other code doesn't have to be. GPL also demands that users include installation instructions, 
-\item Creative Commons licenses\footnote{\href{https://creativecommons.org/licenses/}{https://creativecommons.org/licenses/}}, mostly used for sharing non-code material such as images and documents openly, was created by Lawrence Lessig, the founder of the Creative Commons organisation\footnote{\href{https://creativecommons.org/}{https://creativecommons.org/}}, and may also be used for code projects. There are many licenses they offer, and some variants are copyleft licenses - in particular, "share-alike" clauses are an example of copyleft. 
-\item The Unlicense\footnote{\href{https://unlicense.org/}{https://unlicense.org/}}, created in 2010, is another option, which explicitly states that code is unlicensed, with no restrictions, and also with no liability for the authors (unlike code which is not licensed, which has stricter protections under US copyright law than code which specifically excludes a license). There is a Creative Commons Zero\footnote{\href{https://creativecommons.org/publicdomain/zero/1.0/}{https://creativecommons.org/publicdomain/zero/1.0/}} license which is similar, as well as the WTFPL license ("Do What The Fuck You Want Public License")\footnote{\href{http://www.wtfpl.net}{http://www.wtfpl.net}}, which, although intentionally comically profane, is non-trivial in that it is used in 11,714 different software projects on GitHub as of this writing.\footnote{\href{https://github.com/search?q=license\%3AWTFPL}{https://github.com/search?q=license\%3AWTFPL}} 
+\item The BSD licenses were developed for use with Berkeley Software Distribution, a Unix-like OS. There have been multiple iterations; the first, 4-clause license required every subsequent license to reference and acknowledge the original, ending with large lists of acknowledgements; a subsequent 3-clause license (often called the "New" BSD) removed this, but kept a clause which stated that usage does not imply endorsement by the original contributors; and this was removed in a 2-clause version, often called "Simplified" or the "FreeBSD" license.
+\item The GNU General Public License (GPL)\footnote{\href{https://www.gnu.org/licenses/}{https://www.gnu.org/licenses/}} is the main example of copyleft licensing, where any derivative works that use GPL licensed code must also use a GPL license. This causes major issues when users want to combine code from multiple sources, some of whose licenses may conflict. For this reason, the GNU Library or "Lesser" General Public License (LGPL) was created, to allow only code under the LGPL to be accessible and modifiable openly, while all other code doesn't have to be. GPL also demands that users include installation instructions,
+\item Creative Commons licenses\footnote{\href{https://creativecommons.org/licenses/}{https://creativecommons.org/licenses/}}, mostly used for sharing non-code material such as images and documents openly, was created by Lawrence Lessig, the founder of the Creative Commons organisation\footnote{\href{https://creativecommons.org/}{https://creativecommons.org/}}, and may also be used for code projects. There are many licenses they offer, and some variants are copyleft licenses - in particular, "share-alike" clauses are an example of copyleft.
+\item The Unlicense\footnote{\href{https://unlicense.org/}{https://unlicense.org/}}, created in 2010, is another option, which explicitly states that code is unlicensed, with no restrictions, and also with no liability for the authors (unlike code which is not licensed, which has stricter protections under US copyright law than code which specifically excludes a license). There is a Creative Commons Zero\footnote{\href{https://creativecommons.org/publicdomain/zero/1.0/}{https://creativecommons.org/publicdomain/zero/1.0/}} license which is similar, as well as the WTFPL license ("Do What The Fuck You Want Public License")\footnote{\href{http://www.wtfpl.net}{http://www.wtfpl.net}}, which, although intentionally comically profane, is non-trivial in that it is used in 11,714 different software projects on GitHub as of this writing.\footnote{\href{https://github.com/search?q=license\%3AWTFPL}{https://github.com/search?q=license\%3AWTFPL}}
 \end{itemize}
 
-Ultimately, licenses are complicated legal documents with various repercussions for how code is accessible. 
+As is clear from these short descriptions, licenses are not easily interchangeable and they come with a range of suppositions about how the data ought to be used. Copyleft licenses (GPL) require any derivative works to also be open source, which means that they cannot be used in proprietary codebases, leading to fragmentation of the code space and to legality issues in the long run. However, the effects of copyleft may be more perfidious, in that funders or developers may avoid projects altogether if they find a project has (or doesn't have) a copyleft license. The same could be said for liability waivers, or more especially the lack thereof. This is backed up in studies: for instance, two thirds of respondents for GitHub's open source survey in 2017 said that they value licensing as a major factor when contributing to a project.\footnote{\href{http://opensourcesurvey.org/2017}{http://opensourcesurvey.org/2017}} Ultimately, licenses are complicated legal documents with various repercussions for how code is accessible.
+
+% TODO Maybe add in license statistics? https://libraries.io/licenses
 
 \subsection{Where is open source code?}
 \label{subsec:where-is-open-source-code}
 
-For closed source or proprietary software, the code itself often isn't stored in the open or accessible to third parties. However, for open source software to be defined as open source according to OSI's definitions, it needs to be publicly accessible and well-publicised. This means that storing code on a server where it could technically be accessed via some protocol, or less ideally through a mail-order CD as \citet{krauwer2006strengthening} suggested, is not enough; instead, it ought to be linked to elsewhere and available for everyone to access. This raises the question: where is most open source code stored? 
+For closed source or proprietary software, the code itself often isn't stored in the open or accessible to third parties. However, for open source software to be defined as open source according to OSI's definitions, it needs to be publicly accessible and well-publicised. This means that storing code on a server where it could technically be accessed via some protocol, or less ideally through a mail-order CD as \citet{krauwer2006strengthening} suggested, is not enough; instead, it ought to be linked to elsewhere and available for everyone to access. This raises the question: where is most open source code stored?
 
-Unequivocally, GitHub\footnote{\href{https://github.com}{https://github.com}} is the largest source of shared, open code on the internet, with 27 million users and 80 million repositories as of March 2018\footnote{\href{https://github.com/about}{https://github.com/about}}. There have been several large-scale studies of its codebase by researchers \citep{gousios2012ghtorrent, allamanis2013mining, gousios2014lean, kalliamvakou2014promises, beller2016analyzing} which confirm this. Other large repositories for code of a similar nature, include Sourceforge, with 430k projects and 3.7m users\footnote{\href{https://sourceforge.net/}{https://sourceforge.net, accessed April 18, 2018}}, Bitbucket\footnote{\href{https://bitbucket.org/}{https://bitbucket.org/}} with 5m users\footnote{\href{https://blog.bitbucket.org/2016/09/07/bitbucket-cloud-5-million-developers-900000-teams/}{https://blog.bitbucket.org/2016/09/07/bitbucket-cloud-5-million-developers-900000-teams/}},  Launchpad\footnote{\href{https://launchpad.net/}{https://launchpad.net/}} with 4.2m users\footnote{\href{https://launchpad.net/people}{https://launchpad.net/people}}, and Gitlab\footnote{\href{http://gitlab.com/}{http://gitlab.com/}}, which holds the majority share of self-hosted Git platforms\footnote{\href{https://about.gitlab.com/is-it-any-good/}{https://about.gitlab.com/is-it-any-good/}}. All of these platforms are based around Git, the versioning software developed by Linus Torvalds, used to store different versions of code for developers and teams, which lends itself particularly to shared code that can be updated easily by outside and community developers. It is worth mentioning that not all of these projects are public. 
+Unequivocally, GitHub\footnote{\href{https://github.com}{https://github.com}} is the largest source of shared, open code on the internet, with 27 million users and 80 million repositories as of March 2018\footnote{\href{https://github.com/about}{https://github.com/about}}. There have been several large-scale studies of its codebase by researchers \citep{gousios2012ghtorrent, allamanis2013mining, gousios2014lean, kalliamvakou2014promises, beller2016analyzing} which confirm this. Other large repositories for code of a similar nature, include Sourceforge, with 430k projects and 3.7m users\footnote{\href{https://sourceforge.net/}{https://sourceforge.net, accessed April 18, 2018}}, Bitbucket\footnote{\href{https://bitbucket.org/}{https://bitbucket.org/}} with 5m users\footnote{\href{https://blog.bitbucket.org/2016/09/07/bitbucket-cloud-5-million-developers-900000-teams/}{https://blog.bitbucket.org/2016/09/07/bitbucket-cloud-5-million-developers-900000-teams/}},  Launchpad\footnote{\href{https://launchpad.net/}{https://launchpad.net/}} with 4.2m users\footnote{\href{https://launchpad.net/people}{https://launchpad.net/people}}, and Gitlab\footnote{\href{http://gitlab.com/}{http://gitlab.com/}}, which holds the majority share of self-hosted Git platforms\footnote{\href{https://about.gitlab.com/is-it-any-good/}{https://about.gitlab.com/is-it-any-good/}}. All of these platforms are based around Git, the versioning software developed by Linus Torvalds, used to store different versions of code for developers and teams, which lends itself particularly to shared code that can be updated easily by outside and community developers. It is worth mentioning that not all of these projects are public.
 
-Self-hosted Git instances are a common way of storing proprietary code; one sets up a versioning system within a company, using the tools and set of social standards that developers are used to from working on open source code, but limit access to employees. This is what is meant by GitLab's statement that they host most self-hosted Git platforms. Git isn't the only possible versioning software for this; Google has their own versioning tool, Piper, which hosts the over two billion lines of code used by the majority of the company.\footnote{\href{https://www.wired.com/2015/09/google-2-billion-lines-codeand-one-place/}{https://www.wired.com/2015/09/google-2-billion-lines-codeand-one-place/}} Self-hosted Git instances are generally not open source - generally, one is limited to a hosting service such as GitHub, where one pays a fee for hosting, or, more commonly today, hosts for free if public, but pays a fee for private hosting. 
+Self-hosted Git instances are a common way of storing proprietary code; one sets up a versioning system within a company, using the tools and set of social standards that developers are used to from working on open source code, but limit access to employees. This is what is meant by GitLab's statement that they host most self-hosted Git platforms. Git isn't the only possible versioning software for this; Google has their own versioning tool, Piper, which hosts the over two billion lines of code used by the majority of the company.\footnote{\href{https://www.wired.com/2015/09/google-2-billion-lines-codeand-one-place/}{https://www.wired.com/2015/09/google-2-billion-lines-codeand-one-place/}} Self-hosted Git instances are generally not open source - generally, one is limited to a hosting service such as GitHub, where one pays a fee for hosting, or, more commonly today, hosts for free if public, but pays a fee for private hosting.
 
-There are alternatives to cloud storage (the cloud here being a common metaphor for hosting on someone else's servers) with a hosting provider; one would be storing the code on one's own website, and running your own server or building the user interface yourself. This is largely uncommon due to setup costs, but occasionally happens with academics and smaller teams who are not used to larger hosts or who are worried about the longevity of providers. This latter worry is founded; for instance, Google Code was closed after ten years of running in 2016, causing many projects to need to port to another service such as GitHub.\footnote{\href{https://code.google.com/}{https://code.google.com/}} For academics, a common solution to offset setup and hosting costs is to use university websites and archives as a suitable place to store open source code. For instance, Giellatekno, a language-technology research group, and Divvun, a linked product development group, both work primarily on Sámi languages, and both use the same Subversion (another versioning system) database for storing their code \citep{moshagenopen}, which is hosted by UiT The Arctic University of Norway.\footnote{\href{http://giellatekno.uit.no/}{http://giellatekno.uit.no/}} 
+There are alternatives to cloud storage (the cloud here being a common metaphor for hosting on someone else's servers) with a hosting provider; one would be storing the code on one's own website, and running your own server or building the user interface yourself. This is largely uncommon due to setup costs, but occasionally happens with academics and smaller teams who are not used to larger hosts or who are worried about the longevity of providers. This latter worry is founded; for instance, Google Code was closed after ten years of running in 2016, causing many projects to need to port to another service such as GitHub.\footnote{\href{https://code.google.com/}{https://code.google.com/}} For academics, a common solution to offset setup and hosting costs is to use university websites and archives as a suitable place to store open source code. For instance, Giellatekno, a language-technology research group, and Divvun, a linked product development group, both work primarily on S\'ami languages, and both use the same Subversion (another versioning system) database for storing their code \citep{moshagenopen}, which is hosted by UiT The Arctic University of Norway.\footnote{\href{http://giellatekno.uit.no/}{http://giellatekno.uit.no/}}
 
-In a large part, the question of where to store information is one which the large archival sites mentioned in Section~\ref{subsec:finding-resources} was made to solve. In particular, this is true for non-code resources, such as audio and video corpora, which historically have prioritised for storage over code due to the size of the corpora and due to the older industry standards of keeping all code related to research private, especially when that code was funding by enterprise. Many of these sites were repositories of metadata which pointed to individually hosted content, which made the links susceptible to link rot and offloaded the issue of storage altogether. 
+In a large part, the question of where to store information - especially academic information regarding languages - is one which the large archival sites mentioned in Section~\ref{subsec:finding-resources} was made to solve. In particular, this is true for non-code resources, such as audio and video corpora, which historically have prioritised for storage over code due to the size of the corpora and due to the older industry standards of keeping all code related to research private, especially when that code was funding by enterprise. Many of these sites were repositories of metadata which pointed to individually hosted content, which made the links susceptible to link rot and offloaded the issue of storage altogether.
 
-Today, however, there is a sea change towards putting computational work in the open. Occasionally, this means that academics point to the open source code for their papers on GitHub or elsewhere, or publish their software itself as a research object. For example, \citet{makela2016integrated} and \citet{kleinberg2017web} were published with the Journal of Open Source Software (JOSS)\footnote{\href{http://joss.theoj.org/}{http://joss.theoj.org/}}, which peer-reviews, publishes, and assigns digital object identifiers (DOIs) to software as a way of recognising important academic work. The code for these papers is publicly available on GitHub. 
+Today, however, there is a sea change towards putting computational work in the open. Occasionally, this means that academics point to the open source code for their papers on GitHub or elsewhere, or publish their software itself as a research object. For example, \citet{makela2016integrated} and \citet{kleinberg2017web} were published with the Journal of Open Source Software (JOSS)\footnote{\href{http://joss.theoj.org/}{http://joss.theoj.org/}}, which peer-reviews, publishes, and assigns digital object identifiers (DOIs) to software as a way of recognising important academic work. The code for these papers is publicly available on GitHub. Incentivising academics to publish their code openly is difficult, as software is not weighted in job reviews the same way as research papers; however, there are other benefits such as reproducibility and transparency. Properly aligning them by standardising open source paradigms is an ongoing work.
 
 \subsection{Digital permanence and storage}
 \label{subsec:digital-permanence}
 
-Universities and institutions have short timelines and are largely dependent on specific, allocated, and thus finite funding. Here, I'll answer the question: What other models are there for data storage? What concerns are there?
+Focusing a bit closer on the academic use case, we can easily imagine a case where a professor puts code related to research on a university server, only to see that server change hands, go offline, or become defunct if the professor leaves the university for a position elsewhere or if their focus changes. This is more true of grad students, who don't have the same locational longevity as staff. As mentioned briefly above, this can lead to link rot; links which formerly pointed to workable software may then point nowhere or to the wrong resource. This is an artefact of systemic defects; in a location-based protocol (such as the Hypertext Transfer Protocol (http) protocol used by most websites today), consistency of location is prioritised is rated higher than consistency of content. If the content was pointed to using some more permanent reference, such as a DOI, than the object could be moved without issues, and the problem of link rot is largely solved.
+
+Digital permanence is a larger issue than code placed in locations by individual actors, however. Large organisations may lose their funding, come to the end of their expected lifecycle, or decide to shutter or obfuscate projects upon which research or language communities may depend. A good example would be Google Code, mentioned above in Section~\ref{subsec:where-is-open-source-code}. Another example might be listserv.heanet.ie\footnote{\href{https://listserv.heanet.ie}{https://listserv.heanet.ie}}, which probably held the largest corpus of Irish data at one point, but which was unavailable to crawlers and depends upon the hosting of heanet.ie for continued service \citep{scannell2007crubadan}. A final example might be the linguistic vitality database by Kornai's group mentioned earlier\footnote{\href{https://hlt.bme.hu/en/projects/lingvit}{https://hlt.bme.hu/en/projects/lingvit}}, which is actively looking for more funding.
+
+Aside from the problem of code actively being stored, there is another issue with code rot. Over time, the ecosystem around which code is built changes, and it becomes harder to reproduce the original environment where code was installed and executed, leading to the code itself becoming less useful \citep{eide2010toward}. Some solutions to this problem involve using containers like Docker to emulate the original environment \citep{boettiger2015introduction}. While this research has largely been driven by a need to replicate scientific results \citep{schwab2000making, barnes2010publish, ince2012case}, it is also relevant outside of academic research to enterprise and community solutions to difficult coding problems, such as natural language processing.
+
+As computational languages naturally evolve, it is important to take into account that the code must also be maintained if it is going to find consistent usage. Maintenance is a difficult task that has few immediate incentives, and which generally involves long timelines. For more on this, see Section~\ref{subsec:oss-funding}.
+
+% These paragraphs maybe should be in 6.3
+
+There are alternatives to using academic institutions as code providers; host your own, or use a larger institution that has space set aside for maintenance. Or, release the code publicly using whatever enterprise solution seems like it will last the longest. However, these do change - for instance, Sourceforge was very popular before GitHub rose to the top of the field, and now many projects are moving off of Sourceforge and onto GitHub \citep{finley2011github}, which takes time and effort (why is another matter, and may be related to network effects. For more work mining these networks, see \citet{thung2013network, kalliamvakou2014promises}).
+
+Another idea would be to store your data on peer-to-peer or decentralised networks, which lessen the risk of centralised storage facilities, but also require a peer to serve the files for longevity to be assured. Ultimately, the best bet is to build files and code which are actively used by the community; the long tail of disused projects are at the most risk, while more popular projects will find a way to survive. For more on this, see Section~\ref{subsec:sharing-code-without-a-platform}.
+
+% Universities and institutions have short timelines and are largely dependent on specific, allocated, and thus finite funding. Here, I'll answer the question: What other models are there for data storage? What concerns are there?
 
 % Alexis: there are also issues around evolution of code -- what about open source code that does great things but requires, e.g., java from 10 years ago?
 
-\subsection{Data and privacy}
-\label{subsec:data-and-privacy}
+% Note: I moved Data and Privacy to section 4, because I want to talk about LRLs specifically there, and this is more of an issue for LRLs. I deleted the old Licensing and Liability section, as I already mentioned it.
 
-Here, I'll talk specifically about data rights and privacy, in regards to whether it makes sense to decouple code from data, especially in cases of low resource languages, where sparse data may be naturally enriched with annotation schemas and hard to separate out from the tools being used. In such cases, how do we as a community, researchers as providers, and developers as consumers, deal with licensing, privacy, and proprietary data? Does it make sense to provide links to code that can be used institutionally or commercially without also allowing for things like royalties for usage, or proper licensing for data? Bound up in this are also ethical concerns - well studied in theoretical field linguistics - about the language users themselves not wishing for their data to be used in certain ways.
+% \subsection{Military and enterprise solutions}
+% \label{subsec:military-and-enterprise}
 
-% From Chiarcos:
-
-% a few years back, I compiled a massive corpus of Bibles and related texts
-%in a CES-conformant XML format (following Resnik 1996), some also with
-%annotations. For the most part, distributing this corpus would be illegal
-%under European copyright law (and that's why you haven't heard about it),
-%but I realized that there are circumstances which could allow
-%dissemination of a great part of it under an academic license.
-
-% Compiling and distributing a web corpus is basically illegal in Europe
-%unless explicitly permitted by an accompanying license. However, US law
-%has the concept of fair use, and if a data provider declares US
-%legislation to apply (e.g., that "[t]hese Terms and Conditions ... are
-%governed by the laws of the State of New York"), we Europeans can rely on
-%the principle of fair use, as well.
-%
-%% According to 17 U.S.C. Â§ 107, "the fair use of a copyrighted work,
-%including such use by reproduction in copies or phonorecords or by any
-%other means specified by that section, for purposes such as criticism,
-%comment, news reporting, teaching (including multiple copies for classroom
-%use), scholarship, or research, is not an infringement of copyright." The
-%intended use is for NLP research, DH scholarship and classroom use, so
-%that would probably not an issue -- and in fact, there is no financial
-%damage whatsoever as this data is freely and redundantly available from
-%the web.
-%
-%% However, am I allowed to distribute this corpus with an explicit license
-%statement? I think CC-BY-NC should protect the intellectual and commercial
-%interests of the creator of the electronic edition and be roughly in the
-%spirit of an academic license, but of course, I'm not the actual owner of
-%the data, but only responsible for its transformation and annotation. I am
-%wondering about the consequences if someone eventually creates an NLP tool
-%chain from this data and uses any models trained on the data in a
-%commercial application. As the original copyright extends to derived
-%works, this would be a clear violation of my license statement, of course,
-%but I would be responsible as I redistributed the data and by transforming
-%it from messy HTML to proper markup, I actually enabled this violation.
-
-
-\subsection{Legal rights and liability}
-\label{subsec:legal-rights}
-
-Here, I'll talk about specific licenses used in Open Source, and how they apply to code. I'll try to keep this brief.
-
-I'll also talk about liability wavers - a separate issue from licenses. I'll talk about the standard liability wavers used with the MIT license, and other issues that might arise for language code specifically.
-
-\subsection{Military and enterprise solutions}
-\label{subsec:military-and-enterprise}
-
-In this section, I will talk about how open source meshes with military and enterprise development.
+% In this section, I will talk about how open source meshes with military and enterprise development.
 
 %% https://www.nist.gov/itl/iad/mig/lorehlt-evaluations, DARPA
 
 \subsection{Funding}
 \label{subsec:oss-funding}
 
-Here, I'll talk about funding again - but in terms of open source code. This will be a short section.
+Open source code cannot by definition be sold directly for a profit; open source code must be freely available to all users. This raises an issue where funding for open source development is not direct in the sense of immediate fiscal returns. In this environment, other funding models need to be pursued. The obvious, most common solution is to sell services on top of open source code, and give away the code itself as a loss leader for the company. There are benefits to doing this. Giving away code can be seen as a marketing tactic, drawing other developers, or it may serve to develop a community of active developers who are interested in giving back to the original project without being employed by the core developer's company, or it may serve as a retention device keeping developers who prefer to work in the open happy, or it may serve as a way of verifying a level of security for the code itself, by allowing other participants to point out flaws in the system and fix them without needing to rely upon expensive and possibly ineffectual internal security audits.
+
+For researchers, open sourcing code can be seen as a major time investment \citep{fitzjohn2014reproducible, lowndes2017our}, and although it can help reproducibility, it is not normally the primary source of sharing resource (which would be the scientific article). For researchers, funding needs to come from either salaries, from the researcher's free time, or from grants from larger institutions (not counting enterprise and interdisciplinary cross-overs). This is a serious barrier to open source work in the sciences.
+
+For militaries and governments, there is little incentive to open source unless there is a direct mandate from their political constituents or legal process. Even when there are open challenges run by military branches - for example, the DARPA sponsored Low Resource Languages for Emergent Incidents (LORELEI) challenge\footnote{\href{https://www.nist.gov/itl/iad/mig/lorehlt-evaluations}{https://www.nist.gov/itl/iad/mig/lorehlt-evaluations}} - there are often no demands that any resulting work be open sourced (although the initial challenge is open sourced as a way of inviting participation). Often, this is because the code itself has security concerns; for example, open sourcing speech recognition software for languages spoken by military targets in lossy situations such as over cell networks would only illuminate that such software exists. This example of security through closed source methodologies extends to enterprise; for Google to open all of their MT data would cause them to lose a competitive edge in the translation market.
+
+For software developers outside of academia, militaries, governments, and large enterprises that have business advantages, however, open sourcing code can be a significant way to gain prestige, to improve and market developer relations, to market themselves to prospective clients and companies, and to contribute to their coding communities. There are a variety of ways of funding work within the open source model.
+
+One direct way is to add payment schemes directly to source code or to a website, asking for donations. Another would be to use a collective community to allocate donations and funds; Open Collective\footnote{\href{https://opencollective.com/}{https://opencollective.com/}} is an example of a company that helps do this for developers, some of whom are paid entirely through funds on the site.\footnote{\href{https://medium.com/open-collective/a-new-way-to-fund-open-source-projects-91a51b1b7aac}{https://medium.com/open-collective/a-new-way-to-fund-open-source-projects-91a51b1b7aac}} Crowdfunding sites can also be useful for some developers. Patreon is a good example where makers can earn money directly through fan donations, while Kickstarter has been used many times to fund projects. For example, Dave Gandy, the developer for Font Awesome, an open source font resource, raised over a million dollars in a month from 35,550 backers for the next version of his product.\footnote{\href{https://www.kickstarter.com/projects/232193852/font-awesome-5}{https://www.kickstarter.com/projects/232193852/font-awesome-5}} Code bounties, funds set by community members hoping to have other developers solve bugs, is another limited way of making money.\footnote{\href{https://www.bountysource.com/}{https://www.bountysource.com/}} Cryptocurrencies may eventually present other ways of funding open source, either directly\footnote{\href{https://utopian.io/}{https://utopian.io/}}\footnote{\href{https://oscoin.io/}{https://oscoin.io/}}\footnote{\href{https://gitcoin.co/}{https://gitcoin.co/}}, or through other avenues like initial coin offerings. Already, some companies are using initial coin offerings (similar to IPOs in the business world, but instead marking the launch of a new cryptocurrency) to fund development on open source, such as with Filecoin, which raised over 200 million for their coin development, of which many of the funds will go directly to open source projects run by the company Protocol Labs, such as IPFS \citep{benet2014ipfs} on GitHub.\footnote{\href{https://coinlist.co/filecoin}{https://coinlist.co/filecoin}}
+
+There are several guides online that outline other ways of funding open source.\footnote{\href{https://github.com/nayafia/lemonade-stand}{https://github.com/nayafia/lemonade-stand}}\footnote{\href{https://medium.com/open-source-life/money-and-open-source-d44a1953749c}{https://medium.com/open-source-life/money-and-open-source-d44a1953749c}}\footnote{\href{https://opensource.guide/getting-paid/}{https://opensource.guide/getting-paid/}} In the end, the majority of open source developers are not remunerated for their work directly, and the problem of funds being directed to low resource languages is unlikely to be solved by any of the proposed solutions above. However, by banding together and sharing tools openly, computational linguists working on low resource languages can expedite their work. This methodology will be explored in the next section.
+
+\subsection{Ethical reasons for using open source}
+\label{subsec:oss-ethics}
+
 
 % IARPA and DARPA both are involved with low resource languages and both of them may have their own institutional values that are probably at ends with independent researchers, commercial consumers, and language communities. Does working on sparse data openly bring along with it ethical or moral concerns; if so, how can these be adequately explained, breached, and talked about? How can they be worked around or be part of the conversation? Note that DARPA and the like also use humanitarian reasons as their primary stated aim for work on sparse languages, which may be contrary to their military needs. There is already an extensive literature on moral uses of data -- I could summarize that, and apply it specifically to low resource languages, which is something I do not think has yet been published.
 
@@ -160,8 +141,5 @@ Here, I'll talk about funding again - but in terms of open source code. This wil
 % - Linguistic colonialism
 % - Ethical and moral concerns for military usage
 % - Ethical and moral concerns for big business usage
-
-\subsection{Ethical reasons for using open source}
-\label{subsec:oss-ethics}
 
 Finally, I want to close with a discussion of the moral and ethical reasons for using open source, and whether or not these concerns are relevant to computational linguists.
