--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,98 @@
  year={2014}
 }
 
+@article{fitzjohn2014reproducible,
+  title={Reproducible research is still a challenge},
+  author={FitzJohn, Rich and Pennell, Matt and Zanne, Amy and Cornwell, Will},
+  journal={URL http://ropensci. org/blog/2014/06/09/reproducibility},
+  year={2014}
+}
+
+@article{lowndes2017our,
+  title={Our path to better science in less time using open data science tools},
+  author={Lowndes, Julia S Stewart and Best, Benjamin D and Scarborough, Courtney and Afflerbach, Jamie C and Frazier, Melanie R and O’Hara, Casey C and Jiang, Ning and Halpern, Benjamin S},
+  journal={Nature ecology \& evolution},
+  volume={1},
+  number={6},
+  pages={0160},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{finley2011github,
+  title={Github has surpassed sourceforge and google code in popularity},
+  author={Finley, Klint},
+  journal={ReadWrite, 02-Jun-2011},
+  year={2011}
+}
+
+@inproceedings{thung2013network,
+  title={Network structure of social coding in GitHub},
+  author={Thung, Ferdian and Bissyande, Tegawende F and Lo, David and Jiang, Lingxiao},
+  booktitle={Software maintenance and reengineering (csmr), 2013 17th european conference on},
+  pages={323--326},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{schwab2000making,
+  title={Making scientific computations reproducible},
+  author={Schwab, Matthias and Karrenbach, Martin and Claerbout, Jon},
+  journal={Computing in Science \& Engineering},
+  volume={2},
+  number={6},
+  pages={61--67},
+  year={2000},
+  publisher={IEEE}
+}
+
+
+@article{ince2012case,
+  title={The case for open computer programs},
+  author={Ince, Darrel C and Hatton, Leslie and Graham-Cumming, John},
+  journal={Nature},
+  volume={482},
+  number={7386},
+  pages={485},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{barnes2010publish,
+  title={Publish your computer code: it is good enough},
+  author={Barnes, Nick},
+  journal={Nature News},
+  volume={467},
+  number={7317},
+  pages={753--753},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{eide2010toward,
+  title={Toward replayable research in networking and systems},
+  author={Eide, Eric},
+  journal={Position paper presented at Archive},
+  pages={5},
+  year={2010}
+}
+
+
+@article{boettiger2015introduction,
+  title={An introduction to Docker for reproducible research},
+  author={Boettiger, Carl},
+  journal={ACM SIGOPS Operating Systems Review},
+  volume={49},
+  number={1},
+  pages={71--79},
+  year={2015},
+  publisher={ACM}
+}
+
+
 @article{raymond1999cathedral,
   title={The cathedral and the bazaar},
   author={Raymond, Eric},
